# stm32-i2c-hid

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  README.md  STM32F072RBTX_FLASH.ld  STM32F072RBTx_FLASH.ld  stm32-i2c-hid.ioc
.github/workflows/: cmake-gcc-arm.yml
Code/: base_types.h  i2c_hid.cpp  i2c_hid.h  i2c_hid_config.cpp  i2c_hid_config.h  i2c_slave.cpp  i2c_slave.h  i2c_slave_config.h  newlib_diet.cpp
Code/hid/: application.h  demo_app.cpp  demo_app.h
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
stm32-i2c-hid/: CMakeLists.txt  base_types.hpp  cortex_m0_atomic.cpp  i2c_hid_config.cpp  i2c_hid_config.h  newlib_diet.cpp
stm32-i2c-hid/hid/: demo_app.cpp  demo_app.hpp
stm32-i2c-hid/st/: hal_i2c_slave.cpp  hal_i2c_slave.hpp
